Limpiando la plantilla un poco, creando modulo de reservas, trabajar en el formulario :ok_hand:

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -2,7 +2,10 @@
   "message": "Mensaje en español",
   "nav": {
     "profile": "Perfil",
-    "exit": "Cerrar Sesión"
+    "exit": "Cerrar Sesión",
+    "user":{
+      "login": "Iniciar Sesíon"
+    }
   },
   "signup": {
     "title":"Registrarse",
